# upo_robot_navigation

./: LICENSE  README.md
assisted_steering/: CMakeLists.txt  README.md  package.xml
assisted_steering/cfg/: AssistedSteering.cfg
assisted_steering/launch/: assisted_steering.launch
assisted_steering/src/: AssistedSteering.cpp  AssistedSteeringNode.cpp  odometry_helper_ros.cpp
gmm_sampling/: CMakeLists.txt  README.md  package.xml
gmm_sampling/launch/: approach_gmm_sampling.launch
gmm_sampling/src/: gmm_sampling.cpp  gmm_sampling_ros.cpp
gmm_sampling/srv/: GetApproachGMMProb.srv  GetApproachGMMProbs.srv  GetApproachGMMSamples.srv
navigation_features/: CMakeLists.txt  package.xml
navigation_features/cfg/: nav_features.cfg
navigation_features/src/: nav_features.cpp  uva_features.cpp
path_prediction/: CMakeLists.txt  README.md  package.xml
path_prediction/model/: my_model.h5
path_prediction/src/: prediction_node.py
path_prediction/srv/: PathPrediction.srv
simple_local_planner/: CMakeLists.txt  README.md  package.xml  plp_plugin.xml
simple_local_planner/cfg/: SimpleLocalPlanner.cfg
simple_local_planner/include/simple_local_planner/: costmap_model.h  footprint_helper.h  goal_functions.h  line_iterator.h  odometry_helper_ros.h  pure_planner.h  pure_planner_ros.h  trajectory.h  world_model.h
simple_local_planner/src/: costmap_model.cpp  goal_functions.cpp  odometry_helper_ros.cpp  pure_planner.cpp  pure_planner_ros.cpp  trajectory.cpp
upo_decision_making/: CMakeLists.txt  README.md  package.xml
upo_decision_making/cfg/: demo.rviz  leds.yaml  waypoint_defs.yaml
upo_decision_making/msg/: ControlEvent.msg  HRIControlMode.msg  HRIFeedbackEvent.msg  HRIFeedbackFromInterface.msg  IDArray.msg
upo_decision_making/scripts/: event_manager.py  hri_common.py  led_manager.py  pilot_interface_bridge.py  smach_common.py  upo_nav_behavior_tester.py  upo_navigation_behavior_fsm.py
upo_launchers/: CMakeLists.txt  README.md  assisted_steering.launch  package.xml  real_nav_behavior.launch  record_map.launch  record_nav.launch  rrt_navigation.rviz  rrt_navigation_move_base.rviz  sim_nav_behavior.launch  upo_navigation.rviz  upo_rrt_planners.launch  upo_rrt_planners3.launch
upo_launchers/centre_sportif/: centre_sportif.world  real_sportif_macro_actions.launch  real_sportif_nav_behavior.launch  sim_centre_sportif_macro_actions.launch  sim_centre_sportif_nav_behavior.launch  sim_sportif_nav_behavior.launch  teresa_centre_sportif.world
upo_launchers/cfg/: centre_sportif_waypoint_defs.yaml  elderly_center_waypoint_defs.yaml  exp4_sim_waypoints.yaml  upo_lab_waypoint_defs.yaml  uva_demo_waypoint_defs.yaml  uva_sim_waypoint_defs.yaml  waypoints_move_base.txt
upo_launchers/elderly_center/: elderly_center.world  real_upo_navigation.launch  sim_elderly_center_nav_behavior.launch  sim_upo_navigation.launch  teresa_lesArcades-no_chairs.world  upo_navigation.launch
upo_local_planner/: CMakeLists.txt  README.md  package.xml  ulp_plugin.xml
upo_msgs/: CMakeLists.txt  package.xml
upo_msgs/msg/: PersonGoalArrayUPO.msg  PersonGoalUPO.msg  PersonPoseArrayUPO.msg  PersonPoseUPO.msg
upo_navigation/: CMakeLists.txt  README.md  package.xml  waypoint_defs.yaml
upo_navigation/include/upo_navigation/: costmap_model.h  footprint_helper.h  goal_functions.h  latched_stop_rotate_controller.h  line_iterator.h  local_planner_limits.h  local_planner_util.h  map_cell.h  map_grid.h  map_grid_cost_function.h  map_grid_cost_point.h  map_grid_visualizer.h  obstacle_cost_function.h  odometry_helper_ros.h  oscillation_cost_function.h  planar_laser_scan.h  point_grid.h  prefer_forward_cost_function.h  simple_scored_sampling_planner.h  simple_trajectory_generator.h  trajectory.h  trajectory_cost_function.h  trajectory_planner.h  trajectory_sample_generator.h  trajectory_search.h  upo_navigation.h  velocity_iterator.h  voxel_grid_model.h  world_model.h
upo_navigation/include/upo_navigation/pp_controller/: trajectory_planner_pp.h
upo_navigation/msg/: FeaturesWeights.msg  PointCost.msg
upo_navigation/src/: costmap_model.cpp  footprint_helper.cpp  goal_functions.cpp  latched_stop_rotate_controller.cpp  local_planner_limits.py  local_planner_util.cpp  map_cell.cpp  map_grid.cpp  map_grid_cost_function.cpp  map_grid_visualizer.cpp  obstacle_cost_function.cpp  odometry_helper_ros.cpp  oscillation_cost_function.cpp  point_grid.cpp  prefer_forward_cost_function.cpp  simple_scored_sampling_planner.cpp  simple_trajectory_generator.cpp  trajectory.cpp  trajectory_planner.cpp  upo_navigation.cpp  upo_navigation_node.cpp  voxel_grid_model.cpp
upo_navigation/src/pp_controller/: trajectory_planner_pp.cpp
upo_navigation/srv/: FeatureCounts.srv  PointCosts.srv  SetWeights.srv
upo_navigation_macro_actions/: CMakeLists.txt  README.md  package.xml
upo_robot_navigation/: CMakeLists.txt  package.xml
upo_rrt_planners/: CMakeLists.txt  README.md  package.xml
upo_rrt_planners/cfg/: RRTRosWrapper.cfg
upo_rrt_planners/include/upo_rrt_planners/: Action.h  NearestNeighbors.h  NearestNeighborsFLANN.h  Node.h  State.h  StateChecker.h  StateSpace.h
upo_rrt_planners/include/upo_rrt_planners/planners/: Planner.h
upo_rrt_planners/include/upo_rrt_planners/planners/control/: HalfRRTstar.h  RRT.h  RRTstar.h
upo_rrt_planners/include/upo_rrt_planners/planners/simple/: SimpleRRT.h  SimpleRRTstar.h
upo_rrt_planners/include/upo_rrt_planners/ros/: RRT_ros_wrapper.h  ValidityChecker.h
upo_rrt_planners/include/upo_rrt_planners/steering/: Steering.h
upo_rrt_planners/launch/: upo_rrt_planners.launch
upo_rrt_planners/src/: Action.cpp  Node.cpp  RandomNumbers.cpp  State.cpp  StateSpace.cpp
upo_rrt_planners/src/planners/: Planner.cpp
upo_rrt_planners/src/planners/control/: HalfRRTstar.cpp  RRT.cpp  RRTstar.cpp
upo_rrt_planners/src/planners/simple/: SimpleRRT.cpp  SimpleRRTstar.cpp
upo_rrt_planners/src/ros/: RRT_ros_wrapper.cpp  ValidityChecker.cpp  ros_wrapper_node.cpp
upo_rrt_planners/src/steering/: Steering.cpp
upo_social_layer/: CMakeLists.txt  README.md  package.xml  social_layer_plugin.xml
(+209 files in other folders)
