<package>
  <name>upo_robot_navigation</name>
  <version>1.0.0</version>
  <description>A metapackage which contains the packages of the robot navigation system employed by UPO.</description>
  <maintainer email="noeperez@upo.es">Noé Pérez</maintainer>
  <license>BSD</license>
 
  <url type="repository">https://github.com/robotics-upo</url>

  <author email="noeperez@upo.es">Noé Pérez</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_base</run_depend>

  <!--<run_depend>control_msgs</run_depend>
  <run_depend>diagnostics</run_depend>
  <run_depend>executive_smach</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>robot_model</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>-->

  <export>
    <metapackage/>
  </export>
</package>
